--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
         "uuid": "^11.0.2",
+        "xml2js": "^0.6.2",
         "zone.js": "~0.14.3"
     },
     "devDependencies": {
