--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/platform-browser": "^17.3.0",
         "@angular/platform-browser-dynamic": "^17.3.0",
         "@angular/router": "^17.3.0",
+        "chart.js": "^4.4.6",
         "moment": "^2.30.1",
         "ngx-cookie-service": "^17.1.0",
         "ngx-csv": "^0.3.2",
