--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
         "resolveJsonModule": true,
         "lib": [
             "ES2022",
-            "dom"
+            "dom",
+            "ESNext"
         ]
     },
     "angularCompilerOptions": {
